# Rust-Data-Validation-API

./: .gitignore  README.md
backend/: Cargo.toml  valid.xml
backend/src/: main.rs
backend/src/api/: MongoDB_User_Validation.code-workspace  user_api.rs
backend/src/models/: db_models.rs  mod.rs  xml_models.rs
backend/src/repository/: mongodb_repo.rs
frontend/: package-lock.json  package.json  tailwind.config.ts  types.ts
frontend/actions/: addUser.ts  deleteUser.ts  getUsers.ts  updateUser.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddButton.tsx  AddUserModal.tsx  EditUserModal.tsx  Input.tsx  Modal.tsx  SearchBar.tsx  Table.tsx  TableRow.tsx
frontend/hooks/: useAddUserModal.ts  useEditUserModal.ts  useUsers.ts
frontend/providers/: ModalProvider.tsx  TableProvider.tsx
