[package]
name = "actix-mongo-api"
version = "0.1.0"
authors = ["Batuhan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1" }
serde = { version = "1.0.196", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.10.3"
actix-cors = "0.7.0"
env_logger = "0.11.1"
serde_json = "1.0.113"
actix-rt = "2.9.0"
futures = "0.3.30"
notify = "6.1.1"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
actix = "0.13.3"
futures-util = "0.3.30"


[dependencies.mongodb]
version = "2.8.1"
